k8s/apps/games/romm/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: romm
  namespace: romm
  labels:
    app.kubernetes.io/name: romm
    app.kubernetes.io/instance: romm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: romm
      app.kubernetes.io/instance: romm
  template:
    metadata:
      labels:
        app.kubernetes.io/name: romm
        app.kubernetes.io/instance: romm
    spec:
      enableServiceLinks: false
      containers:
        - name: romm
          image: ghcr.io/rommapp/romm:5.3.1
          volumeMounts:
            - name: library
              mountPath: /romm/library
            - name: assets
              mountPath: /romm/assets
            - name: resources
              mountPath: /romm/resources
            - name: redis-data
              mountPath: /redis-data
            - name: config
              mountPath: /romm/config/config.yml
              subPath: config.yml
      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: library
        - name: assets
          persistentVolumeClaim:
            claimName: assets
        - name: resources
          persistentVolumeClaim:
            claimName: resources
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-data
        - name: config
          configMap:
            name: romm-config
