k8s/apps/games/romm/svc.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: romm
  namespace: romm
  labels:
    app.kubernetes.io/name: romm
    app.kubernetes.io/instance: romm
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: romm
    app.kubernetes.io/instance: romm
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
