k8s/apps/games/romm/ingress.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: romm
  namespace: romm
  labels:
    app.kubernetes.io/name: romm
    app.kubernetes.io/instance: romm
spec:
  ingressClassName: ingress-external-traefik
  rules:
    - host: romm.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: romm
                port:
                  name: http
